# HandwrittenCharacter

./: Simple_CNN_graph  data.py  evaluate.py  main.py  pyproject.toml  train.py  visialize.py  visialize_simple_cnn.py  visualize_manim.py
models/: simple_cnn.pth  simple_cnn.py
