[project]
name = "handwrittencharacter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "matplotlib>=3.10.7",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchvista>=0.2.6",
    "torchviz>=0.0.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
